--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 server.port=8081
 
+#-------------------- EMAIL NOTIFICATION --------------------------
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tybootcampbasket@gmail.com
+spring.mail.password=Final.project21
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 #-------------------- RABBITMQ CONFIG -----------------------------
 sr.rabbit.queue.name.stock.change=stock-change-info-queue
