db connection have been made

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 server.port=8081
 
+#-------------------- DB ------------------------------------------
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = create
+spring.datasource.url=jdbc:postgresql://localhost:5432/basket
+spring.datasource.username=basket
+spring.datasource.password=basket
+
 #-------------------- EMAIL NOTIFICATION --------------------------
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
